--- a/index.html
+++ b/index.html
@@ -95,9 +95,12 @@
       "Q123407672": { name: "侯朝升", dept: "貨裝部" },
       "H123445069": { name: "黃振盈", dept: "旅服部" },
       "E123781843": { name: "張志堅", dept: "作管部" },
-      "F127959213": { name: "游騰蔚", dept: "旅服部" },
+      "F127959213": { name: "游騰蔚", dept: "作管部" },
       "K222219961": { name: "黃誼楟", dept: "艙服部" },
       "C121279893": { name: "林琨詠", dept: "客裝部" },
+      "H124776278": { name: "柯俊宇", dept: "客裝部" },
+      "H124085601": { name: "藍震霖", dept: "旅服部" },
+      "H123953093": { name: "陳建興", dept: "客裝部" },
       "H224041692": { name: "詹蕙華", dept: "客裝部" }
     };
 
