--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       "H124776278": { name: "柯俊宇", dept: "客裝部" },
       "H124085601": { name: "藍震霖", dept: "旅服部" },
       "H123953093": { name: "陳建興", dept: "客裝部" },
-      "H224041692": { name: "詹蕙華", dept: "客裝部" }
+      "H224041692": { name: "詹蕙華", dept: "帶大家到東京迪士尼員工旅遊" }
     };
 
     const steps = [
