--- a/index.html
+++ b/index.html
@@ -101,7 +101,18 @@
       "H124776278": { name: "柯俊宇", dept: "客裝部" },
       "H124085601": { name: "藍震霖", dept: "旅服部" },
       "H123953093": { name: "陳建興", dept: "客裝部" },
-      "H224041692": { name: "詹蕙華", dept: "全副武裝到LS客裝部報到WE WANT YOU!" }
+      "H124443603": { name: "邱智揚", dept: "蒐集宿霧海灘比基尼照10張" },
+      "F123144494": { name: "郭金生", dept: "跟劉慶芳索討紅包10000元" },
+      "P223148455": { name: "許家瑜", dept: "跟劉慶芳索討紅包20000元" },
+      "A130121200": { name: "辜健忠", dept: "跟劉慶芳索討紅包30000元" },
+      "F228806026": { name: "藍苡甄", dept: "跟劉慶芳索討紅包60000元+邱智揚泳裝照1張" },
+      "H224275287": { name: "孫瑞韓", dept: "地服處溫暖大家庭祝闔家平安寶寶快樂成長" },
+      "H124394089": { name: "彭重瑋", dept: "跟劉慶芳索討紅包50000元" },
+      "V120504482": { name: "古政宏", dept: "您不是督導 是我們最帥的大家長(提醒您劉慶芳紅包還沒拿出來)" },
+      "F121623849": { name: "陳建安", dept: "您不是督導 是我們的大家長(提醒您劉慶芳紅包還沒拿出來)" },
+      "H124374621": { name: "李意揚", dept: "您不是督導 是我們的大家長(提醒您劉慶芳紅包還沒拿出來)" },
+      "A123242810": { name: "陳銘杰", dept: "您不是督導 是我們的大家長(提醒您劉慶芳紅包還沒拿出來)" },
+      "H224041692": { name: "詹蕙華", dept: "先帶大家到東京迪士尼員工旅遊 再全副武裝到LS客裝部報到WE WANT YOU!" }
     };
 
     const steps = [
