--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
       "F121623849": { name: "陳建安", dept: "您不是督導 是我們的大家長(提醒您劉慶芳紅包還沒拿出來)" },
       "H124374621": { name: "李意揚", dept: "您不是督導 是我們的大家長(提醒您劉慶芳紅包還沒拿出來)" },
       "A123242810": { name: "陳銘杰", dept: "您不是督導 是我們的大家長(提醒您劉慶芳紅包還沒拿出來)" },
-      "H224041692": { name: "詹蕙華", dept: "先帶大家到東京迪士尼員工旅遊 再全副武裝到LS客裝部報到WE WANT YOU!" }
+      "R120451777": { name: "劉慶芳", dept: "您不是督導 是我們的大家長(提醒您紅包還沒拿出來)" },
+      "A122089980": { name: "黃吳進", dept: "您不是督導 是我們的大家長(提醒您劉慶芳紅包還沒拿出來)" },
+      "H224041692": { name: "詹蕙華", dept: "先帶大家到東京迪士尼員工旅遊 再全副武裝到*客裝部*報到!WE WANT YOU!" }
     };
 
     const steps = [
