--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
       "H124776278": { name: "柯俊宇", dept: "客裝部" },
       "H124085601": { name: "藍震霖", dept: "旅服部" },
       "H123953093": { name: "陳建興", dept: "客裝部" },
+      "H125511771": { name: "張智淵", dept: "外招督導請等待下次任務指示" },
+      "A131112063": { name: "曾昊", dept: "外招督導請等待下次任務指示" },
+      "F130024505": { name: "張耿豪", dept: "外招督導請等待下次任務指示" },
+      "G222341992": { name: "邱姿雅", dept: "外招督導請等待下次任務指示" },
+      "B123606548": { name: "吳品陞", dept: "外招督導請等待下次任務指示" },
+      "C221542571": { name: "薛喬薺", dept: "外招督導請等待下次任務指示" },
+      "M222543990": { name: "李筱蔓", dept: "外招督導請等待下次任務指示" },
       "H124443603": { name: "邱智揚", dept: "蒐集宿霧海灘比基尼照10張" },
       "F123144494": { name: "郭金生", dept: "跟劉慶芳索討紅包10000元" },
       "P223148455": { name: "許家瑜", dept: "跟劉慶芳索討紅包20000元" },
