--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       "H124085601": { name: "藍震霖", dept: "旅服部" },
       "A123316066": { name: "張宏安", dept: "旅服部" },
       "H123953093": { name: "陳建興", dept: "客裝部" },
-      "H125036666": { name: "沈玄堂", dept: "貨服部" },
+      "H125036666": { name: "沈玄堂", dept: "貨服部FS" },
       "H125511771": { name: "張智淵", dept: "外招督導請等待下次任務指示" },
       "A131112063": { name: "曾昊", dept: "外招督導請等待下次任務指示" },
       "F130024505": { name: "張耿豪", dept: "外招督導請等待下次任務指示" },
